--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/francesco-strazzullo/virtual-dom-examples#readme",
   "dependencies": {
+    "mobx": "2.6.0",
     "virtual-dom": "2.1.1"
   },
   "devDependencies": {
